--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/http-client": "5.0.*",
+        "symfony/serializer": "5.0.*",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
