--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "preferred-install": {
