--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5"
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
